컴파일 에러 수정